--- a/workshop/exercise-7/index.html
+++ b/workshop/exercise-7/index.html
@@ -7,7 +7,55 @@
 </head>
 
 <body>
-    <h1>Animals</h1>
+    <h1 class="centered">Animals</h1>
     <section class="section">
         <h2>Cute Animals</h2>
-        <!-- Complete the file... -->
+        <ul class="row">
+            <li class="col">
+                <h3 class="centered">cats</h3>
+                <span class="row">
+                    <img src="/workshop/exercise-7/imgs/cat.jpg" alt="" class="image col">
+                    <img src="/workshop/exercise-7/imgs/cat2.jpeg" alt="" class="image col">
+                </span>
+            </li>
+            <li class="col">
+                <h3 class="centered">dogs</h3>
+                <span class="row">
+                    <img src="/workshop/exercise-7/imgs/dog.jpg" alt="" class="image col">
+                    <img src="/workshop/exercise-7/imgs/dog2.jpg" alt="" class="image col">
+                </span>
+            </li><li class="col">
+                <h3 class="centered">an alpaca</h3>
+                <img src="/workshop/exercise-7/imgs/alpaca.jpg" alt="" class="image col">
+            </li>
+        </ul>
+        <h2>big animals</h2>
+        <ul class="row">
+            <li class="col">
+                <h3 class="centered">an elephant</h3>
+                <img src="/workshop/exercise-7/imgs/elephant.jpg" alt="" class="image">
+            </li>
+            <li class="col">
+                <h3 class="centered">a giraffe</h3>
+                <img src="/workshop/exercise-7/imgs/giraffe.jpg" alt="" class="image">
+            </li>
+            <li class="col">
+                <h3 class="centered">a whale and her baby</h3>
+                <img src="/workshop/exercise-7/imgs/whale.jpg" alt="" class="image">
+            </li>
+        </ul>
+        <h2>Insects</h2>
+        <ul class="row">
+            <li class="col">
+                <h3 class="centered">a firefly</h3>
+                <img src="/workshop/exercise-7/imgs/firefly.jpg" alt="" class="image">
+            </li>
+            <li class="col">
+                <h3 class="centered">a ladybug</h3>                    
+                <img src="/workshop/exercise-7/imgs/ladybug.jpg" alt="" class="image">
+            </li>
+            <li class="col">
+                <h3 class="centered">a butterfly</h3>
+                <img src="/workshop/exercise-7/imgs/butterfly.jpg" alt="" class="image">
+            </li>
+        </ul>
