second attempt, fixing the src for the imgs in 7
baased on the instruction, i've changed the path of the imgs to be the relative path "img/filename.jpeg" and not the full path "workshop/excercise7..../filename.jpeg"
I've checked it on for my and it seems ok.

--- a/workshop/exercise-7/index.html
+++ b/workshop/exercise-7/index.html
@@ -13,49 +13,49 @@
             <li class="col">
                 <h3 class="centered h3">cats</h3>
                 <span class="row">
-                    <img src="/workshop/exercise-7/imgs/cat.jpg" alt="" class="image col">
-                    <img src="/workshop/exercise-7/imgs/cat2.jpeg" alt="" class="image col">
+                    <img src="imgs/cat.jpg" alt="" class="image col">
+                    <img src="imgs/cat2.jpeg" alt="" class="image col">
                 </span>
             </li>
             <li class="col">
                 <h3 class="centered h3">dogs</h3>
                 <span class="row">
-                    <img src="/workshop/exercise-7/imgs/dog.jpg" alt="" class="image col">
-                    <img src="/workshop/exercise-7/imgs/dog2.jpg" alt="" class="image col">
+                    <img src="imgs/dog.jpg" alt="" class="image col">
+                    <img src="imgs/dog2.jpg" alt="" class="image col">
                 </span>
             </li><li class="col">
                 <h3 class="centered h3">an alpaca</h3>
-                <img src="/workshop/exercise-7/imgs/alpaca.jpg" alt="" class="image col">
+                <img src="imgs/alpaca.jpg" alt="" class="image col">
             </li>
         </ul>
         <h2>big animals</h2>
         <ul class="row">
             <li class="col">
                 <h3 class="centered h3">an elephant</h3>
-                <img src="/workshop/exercise-7/imgs/elephant.jpg" alt="" class="image">
+                <img src="imgs/elephant.jpg" alt="" class="image">
             </li>
             <li class="col">
                 <h3 class="centered h3">a giraffe</h3>
-                <img src="/workshop/exercise-7/imgs/giraffe.jpg" alt="" class="image">
+                <img src="imgs/giraffe.jpg" alt="" class="image">
             </li>
             <li class="col">
                 <h3 class="centered h3">a whale and her baby</h3>
-                <img src="/workshop/exercise-7/imgs/whale.jpg" alt="" class="image">
+                <img src="imgs/whale.jpg" alt="" class="image">
             </li>
         </ul>
         <h2>Insects</h2>
         <ul class="row">
             <li class="col">
                 <h3 class="centered h3">a firefly</h3>
-                <img src="/workshop/exercise-7/imgs/firefly.jpg" alt="" class="image">
+                <img src="imgs/firefly.jpg" alt="" class="image">
             </li>
             <li class="col">
                 <h3 class="centered h3">a ladybug</h3>                    
-                <img src="/workshop/exercise-7/imgs/ladybug.jpg" alt="" class="image">
+                <img src="imgs/ladybug.jpg" alt="" class="image">
             </li>
             <li class="col">
                 <h3 class="centered h3 ">a butterfly</h3>
-                <img src="/workshop/exercise-7/imgs/butterfly.jpg" alt="" class="image">
+                <img src="imgs/butterfly.jpg" alt="" class="image">
             </li>
         </ul>
         </body>
